# eureka_localization

./: CMakeLists.txt  package.xml
config/: eagleye.yaml  ekf_el_classico.yaml  ekf_vis_based.yaml  odometry.yaml  rgbd_odometry.yaml
launch/: localization.launch.py
