<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>eureka_localization</name>
  <version>1.0.0</version>
  <description>launch and config's for setup localization on eureka rover</description>
  <license>Apache License 2.0</license>
  <maintainer email="sewa.egorov@yandex.ru">Vsevolod Egorov</maintainer>

  <author email="sewa.egorov@yandex.ru">Vsevolod Egorov</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>generate_parameter_library</build_depend>

  <depend>eureka_imuwt901</depend>
  <depend>eureka_odometry</depend>
  <!-- <depend>eagleye_rt</depend> -->
  <depend>rtklib_ros_bridge</depend>
  <depend>rcpputils</depend>
  <depend>rclcpp</depend>

  <test_depend>ament_cmake_gmock</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
